# cmd/api/routes.go
@@ -2,7 +2,6 @@ package main
 
 import (
 	_ "github.com/aerosystems/auth-service/docs" // docs are generated by Swag CLI, you have to import it.
-	"github.com/aerosystems/auth-service/internal/middleware"
 	"github.com/aerosystems/auth-service/internal/models"
 	"github.com/labstack/echo/v4"
 	echoSwagger "github.com/swaggo/echo-swagger"
@@ -12,17 +11,18 @@ func (app *Config) NewRouter() *echo.Echo {
 	e := echo.New()
 
 	docsGroup := e.Group("/docs")
-	docsGroup.Use(middleware.BasicAuthMiddleware)
+	docsGroup.Use(app.basicAuthMiddleware.BasicAuthMiddleware)
 	docsGroup.GET("/*", echoSwagger.WrapHandler)
 
 	e.POST("/v1/sign-up", app.baseHandler.SignUp)
 	e.POST("/v1/sign-in", app.baseHandler.SignIn)
-	e.POST("/v1/token/refresh", app.baseHandler.RefreshToken)
 	e.POST("/v1/confirm", app.baseHandler.Confirm)
 	e.POST("/v1/reset-password", app.baseHandler.ResetPassword)
+	e.POST("/v1/token/refresh", app.baseHandler.RefreshToken)
 
-	e.POST("/v1/sign-out", app.baseHandler.SignOut, middleware.AuthTokenMiddleware(models.Customer, models.Staff))
-	e.GET("/v1/token/validate", app.baseHandler.ValidateToken, middleware.AuthTokenMiddleware(models.Customer, models.Staff))
+	e.GET("/v1/users", app.baseHandler.GetUser, app.oauthMiddleware.AuthTokenMiddleware(models.CustomerRole))
+	e.POST("/v1/sign-out", app.baseHandler.SignOut, app.oauthMiddleware.AuthTokenMiddleware(models.CustomerRole, models.StaffRole))
+	e.GET("/v1/token/validate", app.baseHandler.ValidateToken, app.oauthMiddleware.AuthTokenMiddleware(models.CustomerRole, models.StaffRole))
 
 	return e
 }
